# XFastInstall-Tauri

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEFECT_ANALYSIS_REPORT.md  DEVELOPER_GUIDE.md  GEMINI.md  IMPLEMENTATION_STATUS.md  MIXED_FORMAT_OPTIMIZATION.md  NESTED_ARCHIVE_OPTIMIZATION.md  README.md  SYMLINK_NOTES.md  TODO.md  USER_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.js  tmpclaude-ebda-cwd  vite.config.ts
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: README.md  build-tauri.yml  build.yml  release.yml
cover-image/: README.md  cover-dark.html  cover.html
scripts/: generate_icon.ps1  install-rollup-native.js
src/: App.vue  main.ts  style.css  tmpclaude-bc84-cwd
src-tauri/: Cargo.toml  tauri.conf.json  tmpclaude-2273-cwd
src-tauri/capabilities/: main-capability.json
src-tauri/icons/: icon.icns  icon.png.txt
src-tauri/src/: analyzer.rs  app_dirs.rs  atomic_installer.rs  cache.rs  error.rs  hash_collector.rs  installer.rs  lib.rs  livery_patterns.rs  logger.rs  main.rs  management_index.rs  models.rs  performance.rs  registry.rs  scanner.rs  scenery_classifier.rs  scenery_index.rs  scenery_packs_manager.rs  task_control.rs  tmpclaude-d7cf-cwd  updater.rs  verifier.rs
src-tauri/src/database/: connection.rs  migrations.rs  mod.rs  queries.rs  schema.rs
src/components/: AnalyzingOverlay.vue  AnimatedText.vue  CompletionView.vue  ConfirmModal.vue  ConfirmationModal.vue  ErrorModal.vue  FailedTasksModal.vue  InstallProgressOverlay.vue  LanguageSwitcher.vue  ManagementEntryCard.vue  PasswordModal.vue  SceneryEntryCard.vue  SceneryManager.vue  ThemeSwitcher.vue  ToastNotification.vue  UpdateBanner.vue
src/i18n/: en.ts  index.ts  zh.ts
src/services/: api.ts  logger.ts  storage.ts
src/stores/: app.ts  lock.ts  management.ts  modal.ts  progress.ts  scenery.ts  theme.ts  toast.ts  update.ts
src/types/: index.ts
src/utils/: validation.ts
src/views/: Home.vue  Management.vue  Onboarding.vue  SceneryManager.vue  Settings.vue  tmpclaude-3cb2-cwd
