[package]
name = "xfastinstall"
version = "0.1.0"
description = "X-Plane 12 Addon Installer"
authors = ["XFastInstall Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
zip = "2"
sevenz-rust = "0.6"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[lib]
name = "xfastinstall_lib"
crate-type = ["lib", "cdylib", "staticlib"]
