[package]
name = "xfastinstall"
version = "0.1.0"
description = "X-Plane Addon Installer"
authors = ["XFastInstall Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
zip = "2"
sevenz-rust2 = "0.10"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
once_cell = "1.19"
dirs = "5"
rayon = "1.10"
unrar = "0.5"
tempfile = "3"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[lib]
name = "xfastinstall_lib"
crate-type = ["lib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
